--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.1.1",
-    "openai": "^3.1.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "next": "^13.3.2",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "readline-sync": "^1.4.10"
   },
   "engines": {
     "node": ">=14.6.0"
